[package]
name = "rsaml"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"
rust-ini = "0.17.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.12.0"
rpassword = "5.0.1"